gcc/testsuite/rust/rustc/ui/parser/issue-2354-1.rs
static foo: isize = 2; } // { dg-error "" "" { target *-*-* } }

